--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:mysql://localhost/brunafotografia_api
+spring.datasource.username=root
+spring.datasource.password=admin
