--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -5,4 +5,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.error.include-stacktrace=never
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
 api.security.token.secret=${JWT_SECRET:12345678}
